fix for AAA color contrast

--- a/assets/css/partials/_html.scss
+++ b/assets/css/partials/_html.scss
@@ -4,6 +4,7 @@
 $colour-day: #fff !default;
 $colour-night: #000 !default;
 $colour-light: #f3f3f3 !default;
+$colour-dim: #4F4F4F !default;
 $colour-transparent: rgba(230,230,230,0.5) !default;
 $colour-day-transparent: rgba(255,255,255,0.5) !default;
 $colour-accent: #CCCCFF !default;
