--- a/assets/css/partials/_theme.scss
+++ b/assets/css/partials/_theme.scss
@@ -5,6 +5,7 @@
 	$colour-day: #fff;
 	$colour-night: #000;
 	$colour-light: #f3f3f3;
+	$colour-dim: #4F4F4F;
 	$colour-transparent: rgba(230,230,230,0.5);
 	$colour-day-transparent: rgba(255,255,255,0.5);
 	$colour-accent: #AAA55F;
